console log test

--- a/views/widget/comments.mustache
+++ b/views/widget/comments.mustache
@@ -223,6 +223,7 @@
         setTimeout(function(){
           $('.btn-upvote').each(function(i, upvote){
             var id = $(this).attr('id')
+            console.log('bind click handler: '+id)
             $(this).click(function(event){
               if (event){
                 event.preventDefault()
