--- a/views/widget/comments.mustache
+++ b/views/widget/comments.mustache
@@ -223,24 +223,22 @@
         setTimeout(function(){
           $('.btn-upvote').each(function(i, upvote){
             var id = $(this).attr('id')
-            console.log('bind click handler: '+id)
             $(this).unbind()
             $(this).click(function(event){
-              if (event){
+              if (event)
                 event.preventDefault()
-              }
-
+              
               console.log('UPVOTE: ' + id)
             })
           })
 
           $('.btn-downvote').each(function(i, downvote){
+            $(this).unbind()
             var id = $(this).attr('id')
             $(this).click(function(event){
-              if (event){
+              if (event)
                 event.preventDefault()
-              }
-
+              
               console.log('DOWNVOTE: ' + id)
             })
           })
