--- a/views/widget/comments.mustache
+++ b/views/widget/comments.mustache
@@ -144,7 +144,7 @@
       </div>
       <div style="padding:6px;background:#e8f2ff;display:flex;flex-direction:column;text-align:center">
         <a href="#"><i id="<% id %>" style="font-size:20px" class="fa fa-arrow-up btn-upvote"></i></a>
-        <small>15</small>
+        <small id="score-<%id%>">15</small>
         <a href="#"><i id="<% id %>" style="font-size:20px" class="fa fa-arrow-down btn-downvote"></i></a>
       </div>
     </div>
