--- a/views/widget/comments.mustache
+++ b/views/widget/comments.mustache
@@ -142,7 +142,7 @@
         </div>
         <p style="color:#7d7d7d"><%{text}%></p>
       </div>
-      <div style="padding:6px;background:#e8f2ff;display:flex;flex-direction:column;text-align:center">
+      <div style="padding:6px;background:#e8f2ff;display:flex;flex-direction:column;text-align:center;justify-content:center">
         <a href="#"><i id="<% id %>" style="font-size:20px" class="fa fa-arrow-up btn-upvote"></i></a>
         <small id="score-<%id%>"><% votes.score %></small>
         <a href="#"><i id="<% id %>" style="font-size:20px" class="fa fa-arrow-down btn-downvote"></i></a>
