--- a/views/widget/comments.mustache
+++ b/views/widget/comments.mustache
@@ -338,13 +338,20 @@
         var comment = {
           text: commentText,
           thread: threadId,
-          // url: window.location.href,
           site: JSON.stringify({id:site.id, slug:site.slug, name:site.name, image:site.image, url:'https://'+site.url}),
           profile: JSON.stringify({
             id: user.id,
             username: user.username,
             image: user.image,
             slug: user.slug
+          }),
+          context: JSON.stringify({
+            id: entity.id,
+            schema: entity.schema,
+            title: entity.title || '',
+            preview: entity.preview || '',
+            image: entity.image || '',
+            dateString: entity.dateString || ''
           })
         }
 
