--- a/views/widget/comments.mustache
+++ b/views/widget/comments.mustache
@@ -339,12 +339,7 @@
           text: commentText,
           thread: threadId,
           site: JSON.stringify({id:site.id, slug:site.slug, name:site.name, image:site.image, url:'https://'+site.url}),
-          profile: JSON.stringify({
-            id: user.id,
-            username: user.username,
-            image: user.image,
-            slug: user.slug
-          }),
+          profile: JSON.stringify({id:user.id, username:user.username, image:user.image, slug:user.slug}),
           context: JSON.stringify({
             id: entity.id,
             schema: entity.schema,
