--- a/views/widget/comments.mustache
+++ b/views/widget/comments.mustache
@@ -181,6 +181,8 @@
       var site = data.site // full site data
       var schema = data.schema // post, video, episode, etc
       var comments = data.comments || []
+      var format = data.format // readonly or comment
+      var canComment = (format!=='readonly')
 
       if (user == null)
         $('#register-or-login').removeClass('d-none')
@@ -214,14 +216,28 @@
 
       var reloadUI = function(){
         if (user){
-          $('#comments-header').removeClass('d-none')
+          if (canComment){
+            $('#comments-header').removeClass('d-none')
+          }
+          else {
+            $('#comments-header').addClass('d-none')
+          }
+
+          // $('#comments-header').removeClass('d-none')
           $('#register-or-login').addClass('d-none')
           $('#display-username').html('Logged in as '+user.username)
           $('#btn-view-profile').attr('href', '/profile/'+user.slug)
         }
         else {
           $('#comments-header').addClass('d-none')
-          $('#register-or-login').removeClass('d-none')
+          // $('#register-or-login').removeClass('d-none')
+
+          if (canComment){
+            $('#register-or-login').removeClass('d-none')
+          }
+          else {
+            $('#register-or-login').addClass('d-none')
+          }
         }
 
         if (entity!=null){
