--- a/views/widget/comments.mustache
+++ b/views/widget/comments.mustache
@@ -159,9 +159,9 @@
         </div>
         <p style="color:#7d7d7d"><%{text}%></p>
 
-        <%#showContext>
+        <%#showContext%>
         <div>SHOW CONTEXT!</div>
-        <%/showContext>
+        <%/showContext%>
       </div>
       <div class="comment-vote">
         <a href="#"><i id="<% id %>" class="fa fa-arrow-up btn-upvote"></i></a>
