show hyperlink with title

--- a/views/widget/comments.mustache
+++ b/views/widget/comments.mustache
@@ -160,7 +160,11 @@
         <p style="color:#7d7d7d"><%{text}%></p>
 
         <%#showContext%>
-        <div>SHOW CONTEXT!</div>
+        <div>
+          <a style="color:red" href="#">
+            <small><% context.title %></small>
+          </a>
+        </div>
         <%/showContext%>
       </div>
       <div class="comment-vote">
