--- a/views/widget/comments.mustache
+++ b/views/widget/comments.mustache
@@ -86,6 +86,18 @@
     .comment-vote i {
       font-size: 20px;
     }
+
+    .context-container {
+      padding: 0px 8px;
+      background: #d0d1d2;
+      width: fit-content;
+      border-radius: 3px;
+    }
+
+    .context-container small {
+      color: #6c757d;
+    }
+
   </style>
 
 </head>
@@ -160,8 +172,8 @@
         <p style="color:#7d7d7d"><%{text}%></p>
 
         <%#showContext%>
-        <div>
-          <a style="color:red" href="#">
+        <div class="context-container">
+          <a href="#">
             <small><% context.title %></small>
           </a>
         </div>
