show share icon next to context title

--- a/views/widget/comments.mustache
+++ b/views/widget/comments.mustache
@@ -175,6 +175,7 @@
         <div class="context-container">
           <a href="#">
             <small><% context.title %></small>
+            <i class="fa fa-share"></i>
           </a>
         </div>
         <%/showContext%>
