context-container icon styling

--- a/views/widget/comments.mustache
+++ b/views/widget/comments.mustache
@@ -98,6 +98,10 @@
       color: #6c757d;
     }
 
+    .context-container i {
+      color: #333;
+      margin-left: 6px;
+    }
   </style>
 
 </head>
