external link icon

--- a/views/widget/comments.mustache
+++ b/views/widget/comments.mustache
@@ -99,7 +99,7 @@
     }
 
     .context-container i {
-      color: #333;
+      color: #6c757d;
       margin-left: 6px;
     }
   </style>
@@ -179,7 +179,7 @@
         <div class="context-container">
           <a href="#">
             <small><% context.title %></small>
-            <i class="fa fa-share"></i>
+            <i class="fa fa-external-link-alt"></i>
           </a>
         </div>
         <%/showContext%>
