context container padding

--- a/views/widget/comments.mustache
+++ b/views/widget/comments.mustache
@@ -88,7 +88,7 @@
     }
 
     .context-container {
-      padding: 0px 8px;
+      padding: 0px 4px 0px 8px;
       background: #d0d1d2;
       width: fit-content;
       border-radius: 3px;
