--- a/views/widget/comments.mustache
+++ b/views/widget/comments.mustache
@@ -177,7 +177,7 @@
 
         <%#showContext%>
         <div class="context-container">
-          <a href="#">
+          <a href="#" class="context-link">
             <small><% context.title %></small>
             <i class="fa fa-external-link-alt"></i>
           </a>
@@ -274,6 +274,16 @@
         $('#comments-container').html(commentsHtml)
 
         setTimeout(function(){
+          $('.context-link').each(function(i, link){
+            $(this).unbind()
+            $(this).click(function(event){
+              if (event)
+                event.preventDefault()
+
+              console.log('click context link: ')
+            })
+          })
+
           $('.btn-upvote').each(function(i, upvote){
             var id = $(this).attr('id')
             $(this).unbind()
