--- a/views/widget/comments.mustache
+++ b/views/widget/comments.mustache
@@ -209,7 +209,7 @@
       var format = data.format // readonly or comment
       var canComment = (format!=='readonly')
       var showContext = (format==='readonly')
-      console.log('SHOW CONTEXT: '+showContext)
+      // console.log('SHOW CONTEXT: '+showContext)
 
       if (user == null)
         $('#register-or-login').removeClass('d-none')
