--- a/views/widget/comments.mustache
+++ b/views/widget/comments.mustache
@@ -273,6 +273,7 @@
 
         $('#comments-container').html(commentsHtml)
 
+        // all of these should be in the SDK:
         setTimeout(function(){
           $('.context-link').each(function(i, link){
             $(this).unbind()
