add slug to comment context

--- a/views/widget/comments.mustache
+++ b/views/widget/comments.mustache
@@ -400,6 +400,7 @@
             id: entity.id,
             schema: entity.schema,
             title: entity.title || '',
+            slug: entity.slug || '',
             preview: entity.preview || '',
             image: entity.image || '',
             dateString: entity.dateString || ''
