--- a/views/widget/comments.mustache
+++ b/views/widget/comments.mustache
@@ -176,6 +176,21 @@
             <a target="_blank" href="#"><small><%profile.username%></small></a>
             <span>&middot;</span>
             <small><%dateString%></small>
+
+        <div class="btn-group">
+          <a href="#" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+            <img class="ml-1" style="max-width:26px;opacity:0.6" src="https://lh3.googleusercontent.com/eJ6Xz07dlPwSEaT8pdPgsrBwExjl0IzK2DpEpJ_8ljbTmBAu0tqQ0KGT9IHJr_LkiQ-BaJs9VmsXI365lRSYt_bB4kk=s120" />
+          </a>
+          <ul style="padding:6px 12px" class="dropdown-menu">
+            <li>
+              <a id="btn-logout" style="text-decoration:none" href="#">Logout</a>
+            </li>
+            <li>
+              <a id="btn-view-profile" target="_blank" style="text-decoration:none" href="#">View Profile</a>
+            </li>
+          </ul>
+        </div>
+
           </div>
           <p style="color:#7d7d7d"><%{text}%></p>
         </div>
