show dropdown if comment author

--- a/views/widget/comments.mustache
+++ b/views/widget/comments.mustache
@@ -177,6 +177,7 @@
             <span>&middot;</span>
             <small><%dateString%></small>
 
+<%#isAuthor%>
 <div class="btn-group" style="vertical-align:inherit">
   <a href="#" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
     <img class="ml-2" style="max-width:18px;opacity:0.6" src="https://lh3.googleusercontent.com/eJ6Xz07dlPwSEaT8pdPgsrBwExjl0IzK2DpEpJ_8ljbTmBAu0tqQ0KGT9IHJr_LkiQ-BaJs9VmsXI365lRSYt_bB4kk=s120" />
@@ -190,6 +191,7 @@
     </li>
   </ul>
 </div>
+<%/isAuthor%>
 
           </div>
           <p style="color:#7d7d7d"><%{text}%></p>
@@ -280,6 +282,9 @@
         var commentsHtml = ''
         comments.forEach(function(comment){
           comment['showContext'] = (showContext) ? 'true' : null
+          if (user != null)
+            comment['isAuthor'] = (user.id===comment.profile.id) ? 'yes' : null
+
           commentsHtml += Mustache.render(tpl, comment)
         })
 
