h4 styling for text editor

--- a/views/admin/main.mustache
+++ b/views/admin/main.mustache
@@ -43,6 +43,13 @@
     .checkbox input {
       height: 20px !important;
     }
+
+    .panel-body h4 {
+      font-size: 16px;
+      font-weight: 600;
+      margin: 0;
+      color: #333;
+    }
   </style>
 </head>
 
