--- a/views/admin/main.mustache
+++ b/views/admin/main.mustache
@@ -47,8 +47,11 @@
     .panel-body h4 {
       font-size: 16px;
       font-weight: 600;
-      margin: 0;
+      margin: 10px 0px;
       color: #333;
+      padding: 0px;
+      background: none;
+      border: none;
     }
   </style>
 </head>
