--- a/views/widget/comments.mustache
+++ b/views/widget/comments.mustache
@@ -226,8 +226,14 @@
       var canComment = (format!=='readonly')
       var showContext = (format==='readonly')
 
-      if (user == null)
+      if (user == null){
         $('#register-or-login').removeClass('d-none')
+        if (data.token != null){
+          console.log('TOKEN: ' + data.token)
+          parent.postMessage({action:'validate-token', data:data.token}, '*')
+          return
+        }
+      }
       else
         $('#comments-header').removeClass('d-none')
 
