remove console log

--- a/views/widget/comments.mustache
+++ b/views/widget/comments.mustache
@@ -229,7 +229,7 @@
       if (user == null){
         $('#register-or-login').removeClass('d-none')
         if (data.token != null){
-          console.log('TOKEN: ' + data.token)
+          // console.log('TOKEN: ' + data.token)
           setTimeout(function(){
             parent.postMessage({action:'validate-token', data:data.token}, '*')
           }, 500)
