place site name input in correct form

--- a/views/landing.mustache
+++ b/views/landing.mustache
@@ -31,6 +31,7 @@
                             <form>
                                 <input id="input-register-email" placeholder="Email" type="text" class="form-control mb-2" />
                                 <input id="input-register-password" placeholder="Password" type="password" class="form-control mb-2" />
+                                <input id="input-site-name" placeholder="Your Site Name" type="text" class="form-control mb-2" />
                             </form>
                             <div id="btn-launch-site-container">
                                 <a id="btn-launch-site" href="#" class="btn btn-info btn-lg w-100 mt-3 mb-4">LAUNCH YOUR SITE</a>                            
@@ -62,7 +63,6 @@
         </div>
         <input id="input-login-email" style="background:#f9f9f9;border:none;padding:0.5125rem 1rem" class="form-control mb-2" type="text" placeholder="Email" />
         <input id="input-login-password" style="background:#f9f9f9;border:none;padding:0.5125rem 1rem" class="form-control mb-3" type="password" placeholder="Password" />
-        <input id="input-site-name" style="background:#f9f9f9;border:none;padding:0.5125rem 1rem" class="form-control mb-3" type="text" placeholder="Your Site Name" />
         <hr />
         <button id="input-login" style="width:100%" type="button" class="btn btn-primary btn-lg mb-1">LOG IN</button>
       </div>
