--- a/views/landing.mustache
+++ b/views/landing.mustache
@@ -25,9 +25,8 @@
                     <div class="card pricing card-lg">
                         <div class="card-body">
                             <span class="display-4 price-collapse collapse show mt-0 mb-2">Join</span>
-                            <span>Free</span>
+                            <span>Create your own Vertex 360 site for free below</span>
                             <hr>
-                            <span class="h6">Includes:</span>
                             <form>
                                 <input id="input-register-email" placeholder="Email" type="text" class="form-control mb-2" />
                                 <input id="input-register-password" placeholder="Password" type="password" class="form-control mb-2" />
