add source to landing page register form

--- a/views/landing.mustache
+++ b/views/landing.mustache
@@ -96,7 +96,8 @@
                 // console.log('validate register fields.')
                 var visitor = {
                     email: $('#input-register-email').val(),
-                    password: $('#input-register-password').val()
+                    password: $('#input-register-password').val(),
+                    source: window.location.href
                 }
 
                 if (visitor.email.length == 0){
