--- a/views/landing.mustache
+++ b/views/landing.mustache
@@ -27,8 +27,8 @@
                             <p class="py-3"><span>All plans come with 14 days free</span></p>
                         </div>
 
-                        <div class="card card-sm shadow text-left">
-                            <div class="card-body p-4">
+                        <div class="card card-sm text-left">
+                            <div class="card-body p-4" style="background:#fcfeff">
                                 <div class="media">
                                     <img alt="Image" src="assets/img/avatar-male-1.jpg" class="avatar avatar-xs" />
                                     <div class="media-body">
@@ -41,7 +41,7 @@
                             </div>
                         </div>
 
-                        <ul class="list-unstyled list-spacing-sm mt-4">
+                        <ul class="list-unstyled list-spacing-sm mt-4 mb-4">
                             <li class="row">
                                 <div class="col-2 col-md-1"><i class="icon-check h5 text-muted"></i>
                                 </div>
