--- a/views/landing.mustache
+++ b/views/landing.mustache
@@ -32,37 +32,39 @@
                                 <div class="media">
                                     <img alt="Image" src="assets/img/avatar-male-1.jpg" class="avatar avatar-xs" />
                                     <div class="media-body">
-                                        <p class="mb-1 text-small">
+                                        <p class="text-small">
                                             “Let’s get one thing straight, this theme’s a straight-up winner. No posers here, just beautiful design and code.”
                                         </p>
-                                        <small>Daniel Cameron</small>
                                     </div>
                                 </div>
                             </div>
                         </div>
 
-                        <ul class="list-unstyled list-spacing-sm mt-4 mb-4">
-                            <li class="row">
-                                <div class="col-2 col-md-1"><i class="icon-check h5 text-muted"></i>
+                        <div class="card card-sm text-left">
+                            <div class="card-body p-4" style="background:#fcfeff">
+                                <div class="media">
+                                    <img alt="Image" src="assets/img/avatar-male-1.jpg" class="avatar avatar-xs" />
+                                    <div class="media-body">
+                                        <p class="text-small">
+                                            “Let’s get one thing straight, this theme’s a straight-up winner. No posers here, just beautiful design and code.”
+                                        </p>
+                                    </div>
                                 </div>
-                                <div class="col-10">Introduce the major benefits of your product and set the scene for what's to come</div>
-                            </li>
-                            <li class="row align-items-center">
-                                <div class="col-2 col-md-1"><i class="icon-check h5 text-muted"></i>
+                            </div>
+                        </div>
+
+                        <div class="card card-sm text-left">
+                            <div class="card-body p-4" style="background:#fcfeff">
+                                <div class="media">
+                                    <img alt="Image" src="assets/img/avatar-male-1.jpg" class="avatar avatar-xs" />
+                                    <div class="media-body">
+                                        <p class="text-small">
+                                            “Let’s get one thing straight, this theme’s a straight-up winner. No posers here, just beautiful design and code.”
+                                        </p>
+                                    </div>
                                 </div>
-                                <div class="col-10">Make a bold new start today</div>
-                            </li>
-                            <li class="row">
-                                <div class="col-2 col-md-1"><i class="icon-check h5 text-muted"></i>
-                                </div>
-                                <div class="col-10">Describe some key features of this aspect of the product</div>
-                            </li>
-                            <li class="row align-items-center">
-                                <div class="col-2 col-md-1"><i class="icon-check h5 text-muted"></i>
-                                </div>
-                                <div class="col-10">Make a bold new start today</div>
-                            </li>
-                        </ul>
+                            </div>
+                        </div>
 
                     </div>
                 </div>
@@ -96,7 +98,7 @@
                                     </div>
                                 </div>
                                 <div class="text-center">
-                                    <span class="text-small">Already have an account? <a href="#" data-toggle="modal" data-target="#login-modal">Log in here</a></span>
+                                    <span id="loading-message" class="text-small">Already have an account? <a href="#" data-toggle="modal" data-target="#login-modal">Log in here</a></span>
                                 </div>
                             </form>
                         </div>
@@ -178,6 +180,7 @@
 
                 console.log('REGISTER: ' + JSON.stringify(visitor))
                 $('#btn-launch-site-container').html('<img style="max-width:30%" src="https://storage.turbo360.co/vertex360-cms-4hujkc/loader.gif" />')
+                $('#loading-message').html('Launching your site. This may take a couple minutes...')
                 window.vertexLib.postRequest('/account/register', visitor, function(err, response){
                     if (err){
                         $('#btn-launch-site-container').html('')
